# crates/sdkwork-appstore-catalog-service/src/domain/models.rs
@@ -519,6 +519,7 @@ pub struct AppTemplate {
     pub template_name: String,
     pub description: Option<String>,
     pub template_type: String,
+    pub template_platform: Option<String>,
     pub category_code: Option<String>,
     pub framework: Option<String>,
     pub language: Option<String>,
